public class Main {
    public static void main(String[] args) {
        System.out.println("hola, soy hugo");
        System.out.println("hola, este es nuestro proyecto");
    }
}
