@startuml

class Main{
+ void main(String[])
}

class Ctes{
+ String PATH_TERRITORIOS
+ String EXP_TERITORIO_SPLITER
+ int NUM_EJERCITO2
+ int NUM_EJERCITO3
+ int NUM_EJERCITO4
+ int NUM_EJERCITO5
+ int NUM_EJERCITO6
+ int NUM_TERRITORIO2
+ int NUM_TERRITORIO3
+ int NUM_TERRITORIO4
+ int NUM_TERRITORIO5
+ int NUM_TERRITORIO6
}

class Mapa{
 -Territorios HashMap<Territorio>
 + void loadWorld()
 + void agregarTerritorio()
 + void getTerritorio()
 + void getVecinos()
 +String toString()
}

class Territorio{
 - String nombre
 - int ejercitos
 - List<Territorio> vecinos
 + String getNombre()
 + int getNumEjercitos()
 + void setNumEjercitos()
 + ArrayList<Territorio> vecinos()
 + String toString()
}

class Jugador{
    - String nombre
    - int ejercitosDisponibles
    - String siglas
    - int posicion
    + void setEjercitoDisponible()
    + void addTerritorios()
    + String toString()
}

class Juego{
    -jugadores ArrayList<Jugador>
    -mapa Mapa
    -int turno
    +void crearJugadores()
    +int numeroJugadores()
    +void repartirTerritorios()
    +void jugar()
    +void jugarJugada()
    +void avanzarTurno()

}

class Gui{
    +void mostrarMenu()
    +int leerOpcion()
    +int leerJugador()
    +int leerJugadores()
    +int leerPosicion()
    +int leerConfirmacion()
}

class Tirada{
    -int valor1
    -int valor2
    -int valor3
    -int numDados
    +Tirada(int numDados)
    +void ordenarDados()
    +int getValor(int Indice)
     +int compararTirada(Tirada otra)
}

class Dado{
    -int valor
    +getValor()
    +tirar()
}

Main ..> Gui

Mapa *--> Territorio

Gui ..> Juego

Juego *--> Jugador

Territorio *--> Territorio

Tirada *--> Tirada

Territorio *--> Jugador

Juego ..> Tirada

Tirada *--> Dado

Juego ..> Mapa


Ctes --> Juego


@enduml